gestio des adresses

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,8 +59,9 @@
                     <a href="{{ path('connexion_connexion') }}">Connexion</a> | <a href="{{ path('inscription_index') }}">Inscription</a>
                 {% endif %}
             </div>
-
-
+            <a href="{{ path('cart') }}">
+                <img src="{{ asset('assets/images/shopping-cart.png') }}" class="cart-icon" alt="Mon panier">
+            </a>
         </div>
     </nav>
 </header>
