--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,9 +5,11 @@
 {% block content %}
 
     <h1>Mon compte</h1>
-    Bienvenu {{ app.user.firstname }} dans votre compte.<br>
+    Bienvenu <b>{{ app.user.firstname }}</b> dans votre compte.<br>
     C'est dans cet espace que vous allez pouvoir gérer vos informations personnelles.
     <hr>
-    <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a>
+    - <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a> <br>
+    - <a href="{{ path('app_account_address') }}">Gérer mes adresses</a> <br>
+    - Mes commandes
 
 {% endblock %}
