--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -16,7 +16,23 @@
             <a href="{{ path('app_account_address_add') }}">cliquer ici</a>
         </p>
     {% else %}
-
+        <div class="row">
+            {% for address in app.user.addresses %}
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ address.name }}</h5>
+                            <p class="card-text">
+                                {{ address.address }} <br>
+                                {{ address.postal }} - {{ address.city }} - {{ address.country }}
+                            </p>
+                            <a href="{{ path('app_account_address_edit', {'id':address.id}) }}" >Modifier</a> |
+                            <a href="{{ path('app_account_address_delete', {'id':address.id}) }}">Supprimer</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     {% endif %}
 
 
