--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,20 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello OrderController!{% endblock %}
+{% block title %} {{ parent() }} - Valider ma commande !  {% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block content %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h2>Je passe ma commande</h2>
+    <p>Choisissez vos préférences avant de passer votre commande sur Un Jeu Pour Tous.</p>
+    <hr>
+    <div class="row">
+        <div class="col-md-6">
+            {% set formHtml %}
+                {{ form_start(form, {action:path('app_order_recap')}) }}
+                    {{ form_label(form.adresses, 'Choisissez votre adresse de livraison') }}
+                    <a href="{{ path('app_account_address_add') }}">Ajouter une adresse</a>
+                {{ form_end(form) }}
+            {% endset %}
+            {{ formHtml | replace({'[br]' : '<br/>'}) | raw }}
+        </div>
+        <div class="col-md-6">
+            <div class="text-center">
+                <b>Récap de ma commande</b><br>
+                <p>Retrouvez le récapitulatif de vos produis</p>
+            </div>
+            <div class="order-summary">
+                {% for key,product in cart %}
+                    <div class="row {% if key > 0 %} mt-2 {% endif %}">
+                        <div class="col-2">
+                            <img src="/uploads/{{ product.product.illustration }}" height="75px" alt="{{ product.product.name }}">
+                        </div>
+                        <div class="col-8 my-auto">
+                            {{ product.product.name }} <br>
+                            <small>{{ product.product.subtitle }}</small>
+                        </div>
+                        <div class="col-2 my-auto">
+                            x {{ product.quantity }}
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Maxime P/Desktop/Code/Php/phpws/unjeupourtous/src/Controller/OrderController.php'|file_link(0) }}">src/Controller/OrderController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Maxime P/Desktop/Code/Php/phpws/unjeupourtous/templates/order/index.html.twig'|file_link(0) }}">templates/order/index.html.twig</a></code></li>
-    </ul>
-</div>
+        </div>
+    </div>
+
 {% endblock %}
