ajout du stripe checkout

--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block javascript %}
+    <script src="https://js.stripe.com/v3/"></script>
+{% endblock %}
+
 {% block title %} {{ parent() }} - Ma commande {% endblock %}
 
 {% block content %}
@@ -55,8 +59,15 @@
             <hr>
             <strong>Total : </strong> {{ ((total /100) + carrier.price) |number_format(2, ',') }} €
 
-            <a href="" class="btn btn-success btn-block mt-3">Payer {{ ((total /100) + carrier.price) |number_format(2, ',') }} €</a>
+            <!-- <a href="" class="btn btn-success btn-block mt-3" id="checkout-button">
+                Payer {{ ((total /100) + carrier.price) |number_format(2, ',') }} €
+            </a> -->
+            
+             <form action="{{ path('app_stripe') }}" method="POST">
+                <button type="submit" class="btn btn-success btn-block mt-3" id="checkout-button">Payer {{ ((total /100) + carrier.price) |number_format(2, ',') }} €</button>
+            </form>
         </div>
     </div>
 
 {% endblock %}
+
