--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}">
+    {% block javascript %}
+    {% endblock %}
 
     <style>
         .bd-placeholder-img {
@@ -29,7 +32,6 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="{{ asset('assets/css/carousel.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}">
 
 </head>
 <body>
@@ -143,4 +145,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 </body>
+{% block script %}
+{% endblock %}
 </html>
