--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -59,11 +59,8 @@
             <hr>
             <strong>Total : </strong> {{ ((total /100) + carrier.price) |number_format(2, ',') }} €
 
-            <!-- <a href="" class="btn btn-success btn-block mt-3" id="checkout-button">
-                Payer {{ ((total /100) + carrier.price) |number_format(2, ',') }} €
-            </a> -->
             
-             <form action="{{ path('app_stripe') }}" method="POST">
+             <form action="{{ path('app_stripe', {'reference': reference}) }}" method="POST">
                 <button type="submit" class="btn btn-success btn-block mt-3" id="checkout-button">Payer {{ ((total /100) + carrier.price) |number_format(2, ',') }} €</button>
             </form>
         </div>
