stripe redirections view added + admin dashboard order update

--- a/templates/order_validate/index.html.twig
+++ b/templates/order_validate/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello OrderValidateController!{% endblock %}
+{% block title %} {{ parent() }} | Confirmation de commande {% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block content %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h2>Confirmation de commande</h2>
+    <p>
+        Bonjour <strong>{{ order.user.firstname}} {{ order.user.lastname }}</strong>. <br>
+        Nous vous remercions pour votre commande {{ order.reference }}. <br>
+        Une confirmation vient de vous être envoyée à l'adresse {{ order.user.email }}.
+        <hr>
+        Votre commande sera livrée par {{ order.carrierName }}, à l'adresse suivante : <br>
+        {{ order.delivery | raw }}
+        <hr>
+        Pour suivre votre commande, rendez-vous dans votre <a href="{{ path('compte_index') }}">compte</a>.
+    </p>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Maxime P/Desktop/Code/Php/phpws/unjeupourtous/src/Controller/OrderValidateController.php'|file_link(0) }}">src/Controller/OrderValidateController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Maxime P/Desktop/Code/Php/phpws/unjeupourtous/templates/order_validate/index.html.twig'|file_link(0) }}">templates/order_validate/index.html.twig</a></code></li>
-    </ul>
-</div>
+
 {% endblock %}
