--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -23,13 +23,13 @@
             <div class="form-check">
                 {{ carrier.name }} <br>
                 {{ carrier.description }}<br>
-                {{ carrier.price |number_format(2, ',') }} €
+                {{ (carrier.price/100)|number_format(2, ',') }} €
             </div>
 
         </div>
         <div class="col-md-6">
             <div class="text-center">
-                <b>Ma commande</b><br>
+                <strong>Ma commande</strong><br>
             </div>
             <div class="order-summary">
                 {% set total = null %}
@@ -55,13 +55,13 @@
 
             <hr>
             <strong>Sous-total : </strong>{{ (total /100)|number_format(2, ',') }} € <br>
-            <strong>Livraison :</strong>{{ carrier.price | number_format(2, ',') }} €
+            <strong>Livraison :</strong>{{ (carrier.price/100) | number_format(2, ',') }} €
             <hr>
-            <strong>Total : </strong> {{ ((total /100) + carrier.price) |number_format(2, ',') }} €
+            <strong>Total : </strong> {{ ((total /100) + carrier.price/100)|number_format(2, ',') }} €
 
-            
+
              <form action="{{ path('app_stripe', {'reference': reference}) }}" method="POST">
-                <button type="submit" class="btn btn-success btn-block mt-3" id="checkout-button">Payer {{ ((total /100) + carrier.price) |number_format(2, ',') }} €</button>
+                <button type="submit" class="btn btn-success btn-block mt-3" id="checkout-button">Payer {{ ((total /100) + carrier.price/100) |number_format(2, ',') }} €</button>
             </form>
         </div>
     </div>
