--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -10,6 +10,6 @@
     <hr>
     - <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a> <br>
     - <a href="{{ path('app_account_address') }}">Gérer mes adresses</a> <br>
-    - Mes commandes
+    - <a href="{{ path('app_account_order') }}">Mes commandes</a> <br>
 
 {% endblock %}
