--- a/templates/order_validate/index.html.twig
+++ b/templates/order_validate/index.html.twig
@@ -13,7 +13,7 @@
         Votre commande sera livrée par {{ order.carrierName }}, à l'adresse suivante : <br>
         {{ order.delivery | raw }}
         <hr>
-        Pour suivre votre commande, rendez-vous dans votre <a href="{{ path('compte_index') }}">compte</a>.
+        Pour suivre votre commande, rendez-vous dans votre <a href="{{ path('app_account_order') }}">compte</a>.
     </p>
 
 
