--- a/templates/account/order_show.html.twig
+++ b/templates/account/order_show.html.twig
@@ -9,7 +9,14 @@
     <a href="{{ path('compte_index') }}">Retour</a>
 
     <hr>
-
+    <strong>Statut de la commande :</strong>
+        {% if order.state==1 %}
+            Paiement accepté
+        {% elseif order.state==2  %}
+            Préparation en cours
+        {% elseif order.state==3  %}
+            Livraison en cours
+        {% endif %} <br>
     <strong>Commande passée le :</strong> {{ order.createdAt | date('d-m-Y H:m') }} <br>
     <strong>Référence de la commande :</strong> {{ order.reference }} <br>
     <strong>Transporteur choisi :</strong> {{ order.carrierName }}
