--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -87,3 +87,12 @@ body {
     padding: 20px;
     margin-top: 22px;
 }
+
+.img_single_product{
+    width: 200px;
+    height: 200px;
+}
+
+.home_carousel_bg{
+
+}
