--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -15,11 +15,7 @@
             <div class="row product-container">
                 {% for product in products %}
                     <div class="col-4">
-                        <div class="product-item text-center">
-                            <a href="{{ path('app_product_detail', {'slug' : product.slug}) }}"><img src="uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid"></a>
-                            <h5>{{ product.name }}</h5>
-                            <span class="product-price">{{ (product.price/100)|number_format(2, ',') }} €</span>
-                        </div>
+                        {% include 'product/single_product.html.twig' %}
                     </div>
                 {% endfor %}
             </div>
