--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+
     <h1>{{ product.name }}</h1>
     <div class="row">
         <div class="col-5">
@@ -18,4 +19,15 @@
             <a href=" {{ path('add_to_cart', {'id' : product.id}) }}" class="btn btn-primary">Ajouter au panier</a>
         </div>
     </div>
+    <hr>
+    <h3>Nos meilleures ventes</h3>
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+        {% for product in products %}
+            <div class="col-md-3">
+                {% include 'product/single_product.html.twig' %}
+            </div>
+        {% endfor %}
+    </div><!-- /.row -->
 {% endblock %}
